--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "server.js",
   "scripts": {
     "debug": "nodemon --inspect=0.0.0.0:9229 src/server.js",
-    "start": "npm-run-all -p nodemon browsersync",
-    "nodemon": "nodemon src/server.js",
-    "browsersync": "browser-sync start --proxy http://localhost:5000 --files 'public, src/app/views'"
+    "start": "npm-run-all -p nodemon",
+    "nodemon": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
